// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZikrItem renders correctly with all display options 1`] = `
<div
  class="relative p-4 rounded-lg bg-white/80 backdrop-blur border border-[var(--blue)]/25 flex flex-col gap-3 text-sm sm:text-base shadow-[0_2px_8px_-2px_rgba(0,0,0,0.08)] animate-fade-in"
>
  <div
    class="text-right font-medium leading-relaxed text-lg sm:text-xl"
    dir="rtl"
  >
    سُبْحَانَ اللهِ وَبِحَمْدِهِ
  </div>
  <div
    class="text-right leading-relaxed text-sm sm:text-base text-[var(--foreground)]/70"
    dir="rtl"
  >
    Subhanallahi wa bihamdihi
  </div>
  <div
    class="text-[var(--foreground)]/80 leading-relaxed text-xs sm:text-sm"
    dir="ltr"
  >
    Glory is to Allah and praise is to Him
  </div>
  <div
    class="flex items-center justify-between mt-1 gap-4"
  >
    <span
      class="text-xs text-[var(--muted)] min-h-[14px] flex items-center"
    >
      Repeat: 100 times
    </span>
    <div
      data-active="false"
      data-id="zikr-1"
      data-loading="false"
      data-testid="audio-player"
    >
      Play
    </div>
  </div>
</div>
`;

exports[`ZikrItem renders correctly with audio error 1`] = `
<div
  class="relative p-4 rounded-lg bg-white/80 backdrop-blur border border-[var(--blue)]/25 flex flex-col gap-3 text-sm sm:text-base shadow-[0_2px_8px_-2px_rgba(0,0,0,0.08)] animate-fade-in"
>
  <div
    class="text-right font-medium leading-relaxed text-lg sm:text-xl"
    dir="rtl"
  >
    سُبْحَانَ اللهِ وَبِحَمْدِهِ
  </div>
  <div
    class="text-right leading-relaxed text-sm sm:text-base text-[var(--foreground)]/70"
    dir="rtl"
  >
    Subhanallahi wa bihamdihi
  </div>
  <div
    class="text-[var(--foreground)]/80 leading-relaxed text-xs sm:text-sm"
    dir="ltr"
  >
    Glory is to Allah and praise is to Him
  </div>
  <div
    class="flex items-center justify-between mt-1 gap-4"
  >
    <span
      class="text-xs text-[var(--muted)] min-h-[14px] flex items-center"
    >
      Repeat: 100 times
    </span>
    <div
      data-active="true"
      data-id="zikr-1"
      data-loading="false"
      data-testid="audio-player"
    >
      Pause
    </div>
  </div>
</div>
`;

exports[`ZikrItem renders correctly with audio playing 1`] = `
<div
  class="relative p-4 rounded-lg bg-white/80 backdrop-blur border border-[var(--blue)]/25 flex flex-col gap-3 text-sm sm:text-base shadow-[0_2px_8px_-2px_rgba(0,0,0,0.08)] animate-fade-in"
>
  <div
    class="text-right font-medium leading-relaxed text-lg sm:text-xl"
    dir="rtl"
  >
    سُبْحَانَ اللهِ وَبِحَمْدِهِ
  </div>
  <div
    class="text-right leading-relaxed text-sm sm:text-base text-[var(--foreground)]/70"
    dir="rtl"
  >
    Subhanallahi wa bihamdihi
  </div>
  <div
    class="text-[var(--foreground)]/80 leading-relaxed text-xs sm:text-sm"
    dir="ltr"
  >
    Glory is to Allah and praise is to Him
  </div>
  <div
    class="flex items-center justify-between mt-1 gap-4"
  >
    <span
      class="text-xs text-[var(--muted)] min-h-[14px] flex items-center"
    >
      Repeat: 100 times
    </span>
    <div
      data-active="true"
      data-id="zikr-1"
      data-loading="true"
      data-testid="audio-player"
    >
      Loading...
    </div>
  </div>
</div>
`;

exports[`ZikrItem renders correctly with only Arabic 1`] = `
<div
  class="relative p-4 rounded-lg bg-white/80 backdrop-blur border border-[var(--blue)]/25 flex flex-col gap-3 text-sm sm:text-base shadow-[0_2px_8px_-2px_rgba(0,0,0,0.08)] animate-fade-in"
>
  <div
    class="text-right font-medium leading-relaxed text-lg sm:text-xl"
    dir="rtl"
  >
    سُبْحَانَ اللهِ وَبِحَمْدِهِ
  </div>
  <div
    class="flex items-center justify-between mt-1 gap-4"
  >
    <span
      class="text-xs text-[var(--muted)] min-h-[14px] flex items-center"
    >
      Repeat: 100 times
    </span>
    <div
      data-active="false"
      data-id="zikr-1"
      data-loading="false"
      data-testid="audio-player"
    >
      Play
    </div>
  </div>
</div>
`;

exports[`ZikrItem renders correctly with only translation 1`] = `
<div
  class="relative p-4 rounded-lg bg-white/80 backdrop-blur border border-[var(--blue)]/25 flex flex-col gap-3 text-sm sm:text-base shadow-[0_2px_8px_-2px_rgba(0,0,0,0.08)] animate-fade-in"
>
  <div
    class="text-[var(--foreground)]/80 leading-relaxed text-xs sm:text-sm"
    dir="ltr"
  >
    Glory is to Allah and praise is to Him
  </div>
  <div
    class="flex items-center justify-between mt-1 gap-4"
  >
    <span
      class="text-xs text-[var(--muted)] min-h-[14px] flex items-center"
    >
      Repeat: 100 times
    </span>
    <div
      data-active="false"
      data-id="zikr-1"
      data-loading="false"
      data-testid="audio-player"
    >
      Play
    </div>
  </div>
</div>
`;

exports[`ZikrItem renders correctly with single repeat 1`] = `
<div
  class="relative p-4 rounded-lg bg-white/80 backdrop-blur border border-[var(--blue)]/25 flex flex-col gap-3 text-sm sm:text-base shadow-[0_2px_8px_-2px_rgba(0,0,0,0.08)] animate-fade-in"
>
  <div
    class="text-right font-medium leading-relaxed text-lg sm:text-xl"
    dir="rtl"
  >
    سُبْحَانَ اللهِ وَبِحَمْدِهِ
  </div>
  <div
    class="text-right leading-relaxed text-sm sm:text-base text-[var(--foreground)]/70"
    dir="rtl"
  >
    Subhanallahi wa bihamdihi
  </div>
  <div
    class="text-[var(--foreground)]/80 leading-relaxed text-xs sm:text-sm"
    dir="ltr"
  >
    Glory is to Allah and praise is to Him
  </div>
  <div
    class="flex items-center justify-between mt-1 gap-4"
  >
    <span
      class="text-xs text-[var(--muted)] min-h-[14px] flex items-center"
    />
    <div
      data-active="false"
      data-id="zikr-1"
      data-loading="false"
      data-testid="audio-player"
    >
      Play
    </div>
  </div>
</div>
`;

exports[`ZikrItem renders correctly without audio 1`] = `
<div
  class="relative p-4 rounded-lg bg-white/80 backdrop-blur border border-[var(--blue)]/25 flex flex-col gap-3 text-sm sm:text-base shadow-[0_2px_8px_-2px_rgba(0,0,0,0.08)] animate-fade-in"
>
  <div
    class="text-right font-medium leading-relaxed text-lg sm:text-xl"
    dir="rtl"
  >
    سُبْحَانَ اللهِ وَبِحَمْدِهِ
  </div>
  <div
    class="text-right leading-relaxed text-sm sm:text-base text-[var(--foreground)]/70"
    dir="rtl"
  >
    Subhanallahi wa bihamdihi
  </div>
  <div
    class="text-[var(--foreground)]/80 leading-relaxed text-xs sm:text-sm"
    dir="ltr"
  >
    Glory is to Allah and praise is to Him
  </div>
  <div
    class="flex items-center justify-between mt-1 gap-4"
  >
    <span
      class="text-xs text-[var(--muted)] min-h-[14px] flex items-center"
    >
      Repeat: 100 times
    </span>
  </div>
</div>
`;
